Fixed gap that was visible when toolbar icon was active.
git-svn-id: http://public-cvs.squiz.net/svn/squiz-framework@1043 1b08cf3a-d8dc-418b-9366-0d0b919357ef

--- a/Systems/User/Widgets/LogoutButton/Web/UserLogoutButton.css
+++ b/Systems/User/Widgets/LogoutButton/Web/UserLogoutButton.css
@@ -1,5 +1,6 @@
 #userLogoutButton {
     -moz-border-radius: 14px 0 0 14px;
+    padding-left: 3px;
 }
 
 #userLogoutButton.GUIToolbar-button .UserLogoutButton-icon {
